--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1>Become a Secret Santa yourself</h1>
-                    <button class="btn btn-dark btn-lg download-btn">Download</button>
-                    <button class="btn btn-outline-light btn-lg download-btn">Download</button>
+                    <button class="btn btn-dark btn-lg download-btn"><i class="fab fa-apple"></i>Download</button>
+                    <button class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-google-play"></i>Download</button>
                 </div>
                 <div class="col-md-6">
                     <img src="img/iphone6.png" alt="" class="title-image">
@@ -50,9 +50,67 @@
             </div>
 
         </section>
+
+        <section id="features">
+            <div class="row">
+                <div class="col-lg-4 feature-box">
+                    <i class="fas fa-sleigh"></i>
+                    <h3>Find Yourself a Secret Santa</h3>
+            <p>Enjoy the holiday spirit to the fullest</p>
+        </div>
+            <div class="col-lg-4 feature-box">
+                <i class="fas fa-gifts"></i>
+                <h3>Find Yourself a Secret Santa</h3>
+            <p>Enjoy the holiday spirit to the fullest</p>
+        </div>
+            <div class="col-lg-4 feature-box">
+                <i class="fas fa-gift"></i>
+                <h3>Find Yourself a Secret Santa</h3>
+            <p>Enjoy the holiday spirit to the fullest</p>
+        </div>
     </div>
+        </section>
 
+        <section id="testimonials">
+            <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="10000">
+                  <h2>Now I can easily find someone who would love to get a Christmas present from me</h2>
+                <img src="img/test2.JPG"  alt="...">
+                <em>Jonh Doe, Chicago</em>
+              </div>
 
+              <div class="carousel-item" data-interval="2000">
+                <h2>Now I can easily find someone who would love to get a Christmas present from me</h2>
+                <img src="img/test2.JPG"  alt="...">
+                <em>Jonh Doe, Chicago</em>
+              </div>
+              <div class="carousel-item">
+                <h2>Now I can easily find someone who would love to get a Christmas present from me</h2>
+                <img src="img/test2.JPG"  alt="...">
+                <em>Jonh Doe, Chicago</em>
+              </div>
+
+            </div>
+
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </section>
+
+        <footer>
+            <h2>Copyright 2020 Secret Santa Team</h2>
+            <h1><i class="fab fa-facebook-f"></i></h1>
+            <h1><i class="fab fa-twitter"></i></h1>
+            <h1><i class="fas fa-envelope-square"></i></h1>
+        </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
